# Entitlement-Quality-Monitor-Utility

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: simulate.yml  test.yml
data/: assignments.json  cmdb_resources.json  entitlements.json  hr_employees.json  violations.json
docs/superpowers/plans/: 2026-04-27-entitlement-quality-monitor-utility.md
docs/superpowers/specs/: 2026-04-27-entitlement-quality-monitor-utility-design.md
scripts/: deploy.sh
src/eqm/: __init__.py  __main__.py  api.py  cli.py  config.py  engine.py  git_sync.py  models.py  persistence.py  scenarios.py  seed.py  simulator.py  workflow.py
src/eqm/dashboard/: __init__.py
src/eqm/dashboard/static/: style.css
src/eqm/dashboard/templates/: _control_bar.html  base.html  cmdb.html  entitlements.html  (+3 more)
src/eqm/rules/: __init__.py  base.py  cmdb_linkage.py  entitlement_quality.py  hr_coherence.py  toxic_combinations.py
tests/: conftest.py  test_api_health.py  test_api_reads.py  test_api_simulate.py  test_api_transitions.py  test_api_writes.py  test_cli.py  test_config.py  test_dashboard.py  test_e2e.py  test_engine.py  test_git_sync.py  test_models.py  test_persistence.py  test_rules_base.py  test_rules_helpers.py  test_rules_registry.py  test_scenarios.py  test_seed.py  test_simulator.py  test_workflow.py
tests/rules/: conftest.py  test_cmdb_01.py  test_cmdb_02.py  test_ent_q_01.py  test_ent_q_02.py  test_ent_q_03.py  test_ent_q_04.py  test_hr_01.py  test_hr_02.py  test_hr_03.py  test_hr_04.py  test_tox_01.py  test_tox_02.py  test_tox_03.py
